# claude-tax-filing-IL

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
.git_backup/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
.git_backup/logs/: HEAD
.git_backup/logs/refs/heads/: main
.git_backup/logs/refs/remotes/origin/: HEAD  main
.git_backup/objects/pack/: pack-4f658f63099e20f098d483c39633bd44292ed681.idx  pack-4f658f63099e20f098d483c39633bd44292ed681.pack  pack-4f658f63099e20f098d483c39633bd44292ed681.rev
.git_backup/refs/remotes/origin/: main
claude_tax_filing/: __init__.py
skills/tax-filing/: SKILL.md
skills/tax-filing/scripts/: discover_fields.py  fill_template.py  process_1099s.py  verify_1040.json  verify_il1040.json
